--- a/components.json
+++ b/components.json
@@ -4,8 +4,8 @@
   "rsc": true,
   "tsx": false,
   "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "app/globals.css",
+    "config": "",
+    "css": "./src/app/globals.css",
     "baseColor": "gray",
     "cssVariables": true,
     "prefix": ""
